<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".alarme">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hintNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTime4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/hintHora"
        android:inputType="time"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="48dp"
        android:onClick="irTelaPrincipal"
        android:text="@string/saveButao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="16dp"
        android:text="@string/AlarmeBar"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993" />

    <ToggleButton
        android:id="@+id/toggleButton3"
        android:layout_width="45dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="ToggleButton"
        android:textOff="@string/dia3"
        android:textOn="@string/dia3"
        app:layout_constraintStart_toEndOf="@+id/toggleButton2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime4" />

    <ToggleButton
        android:id="@+id/toggleButton4"
        android:layout_width="45dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="ToggleButton"
        android:textOff="@string/dia4"
        android:textOn="@string/dia4"
        app:layout_constraintStart_toEndOf="@+id/toggleButton3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime4" />

    <ToggleButton
        android:id="@+id/toggleButton5"
        android:layout_width="45dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="ToggleButton"
        android:textOff="@string/dia5"
        android:textOn="@string/dia5"
        app:layout_constraintStart_toEndOf="@+id/toggleButton4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime4" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/vibraButao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="45dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="ToggleButton"
        android:textOff="@string/dia2"
        android:textOn="@string/dia2"
        app:layout_constraintStart_toEndOf="@+id/toggleButton"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime4" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="45dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="ToggleButton"
        android:textOff="@string/dia1"
        android:textOn="@string/dia1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime4" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="39dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:onClick="desafios"
        app:layout_constraintStart_toEndOf="@+id/checkBox2"
        app:layout_constraintTop_toTopOf="@+id/checkBox2"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/DesafioCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/flashCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <ToggleButton
        android:id="@+id/toggleButton7"
        android:layout_width="45dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="ToggleButton"
        android:textOff="@string/dia7"
        android:textOn="@string/dia7"
        app:layout_constraintStart_toEndOf="@+id/toggleButton6"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime4" />

    <ToggleButton
        android:id="@+id/toggleButton6"
        android:layout_width="45dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="ToggleButton"
        android:textOff="@string/dia6"
        android:textOn="@string/dia6"
        app:layout_constraintStart_toEndOf="@+id/toggleButton5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime4" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="359dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="480dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>